--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.0.12",
+        "alpinejs": "^3.14.9",
         "tailwindcss": "^4.0.12"
     }
 }
