--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "@tailwindcss/vite": "^4.0.12",
         "alpinejs": "^3.14.9",
         "tailwindcss": "^4.0.12"
+    },
+    "engines": {
+        "node": ">=18.16.0"
     }
 }
