--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "start": "php artisan serve --host=0.0.0.0 --port=8080",
         "build": "vite build",
         "dev": "vite"
     },
@@ -20,6 +21,7 @@
         "tailwindcss": "^4.0.12"
     },
     "engines": {
-        "node": ">=18.16.0"
+        "node": ">=18.16.0",
+        "php": ">=8.1"
     }
 }
