--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.0.12",
         "alpinejs": "^3.14.9",
+        "jquery": "^3.7.1",
         "tailwindcss": "^4.0.12"
     },
     "engines": {
